<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextEnterTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_task"
        android:inputType="text"
        android:singleLine="false"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_view_choose_priority"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/priorityRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/lowPriorityRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@android:color/holo_green_light"
            android:checked="true"
            android:padding="8dp"
            android:text="@string/low"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/mediumPriorityRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@android:color/holo_orange_light"
            android:padding="8dp"
            android:text="@string/medium"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/highPriorityRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@android:color/holo_red_light"
            android:padding="8dp"
            android:text="@string/high"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textSize="24sp" />

</LinearLayout>